--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "description": "",
   "dependencies": {
     "dotenv": "^17.2.3",
-    "node-telegram-bot-api": "^0.67.0"
+    "mongoose": "^9.1.4",
+    "node-telegram-bot-api": "^0.67.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "^25.0.3",
