--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
     "rootDir": "src",
     "outDir": "dist",
     "strict": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "types": ["node"]
   }
